# pin-one

./: CMakeLists.txt  main.c  sort-later.txt  weather.c  weather.h
src/: concept.c  concept.h
src/giventake/: give.c  give.h  take.c  take.h
src/seek/: research.c
